cmake_minimum_required(VERSION 3.10)

PROJECT(HELLO)

SET(CMAKE_SYSTEM_NAME Linux)

SET(PROJECT_ROOT_PATH ${PROJECT_BINARY_DIR}/.. ) 

SET(PROJECT_COMPILE_TOOL_PATH ${PROJECT_ROOT_PATH}/tools/cross_compilation_tool/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu ) 

SET(CMAKE_C_COMPILER   ${PROJECT_COMPILE_TOOL_PATH}/bin/aarch64-linux-gnu-gcc)

SET(CMAKE_CXX_COMPILER ${PROJECT_COMPILE_TOOL_PATH}/bin/aarch64-linux-gnu-g++)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_PATH}/bin)

ADD_SUBDIRECTORY(src)