INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR}/../src )
INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR}/../include )

SET (PROJECT_SENSOR_SRC sensor/common.cc sensor/camera.cc sensor/gnss.cc sensor/imu.cc sensor/lidar.cc)

ADD_LIBRARY(libmvsdk SHARED IMPORTED )
SET_TARGET_PROPERTIES(libmvsdk PROPERTIES   IMPORTED_LOCATION "${MVSDK_DYNAMIC_LIBS}/libMVSDK.so")
set(MVSDK_LIBS  libmvsdk)


SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) 

SET(CMAKE_INSTALL_RPATH ${MVSDK_DYNAMIC_LIBS}) 

ADD_EXECUTABLE ( hello main.cc ${PROJECT_SENSOR_SRC} )

TARGET_LINK_LIBRARIES(hello ${MVSDK_LIBS} )